--- a/i18n/language/tr.po
+++ b/i18n/language/tr.po
@@ -7,14 +7,14 @@
 # Translators:
 # Translators:
 # Translators:
-# Metal <meteoramic@yahoo.com>, 2015,2022
+# Metal <meteoramic@yahoo.com>, 2015,2022-2023
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:35+0000\n"
-"Last-Translator: Metal <meteoramic@yahoo.com>, 2015,2022\n"
+"Last-Translator: Metal <meteoramic@yahoo.com>, 2015,2022-2023\n"
 "Language-Team: Turkish (http://app.transifex.com/aimeos/aimeos-core/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -131,7 +131,7 @@ msgid "ee"
 msgstr "Ewe"
 
 msgid "el"
-msgstr ".Yunanca"
+msgstr "Yunanca"
 
 msgid "en"
 msgstr "İngilizce"
