--- a/i18n/controller/he.po
+++ b/i18n/controller/he.po
@@ -3,62 +3,60 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# George Cojocaru, 2024
-# iulian iulian <iulian.abc@gmail.com>, 2020
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-09-26 15:47+0200\n"
 "PO-Revision-Date: 2015-09-29 12:30+0000\n"
-"Last-Translator: George Cojocaru, 2024\n"
-"Language-Team: Romanian (http://app.transifex.com/aimeos/aimeos-core/language/ro/)\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: Hebrew (http://app.transifex.com/aimeos/aimeos-core/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ro\n"
-"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1));\n"
+"Language: he\n"
+"Plural-Forms: nplurals=3; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: 2;\n"
 
 #, php-format
 msgid "Class \"%1$s\" does not implement interface \"%2$s\""
-msgstr "Clasa \"%1$s\" nu implementează interfața \"%2$s\""
+msgstr "מחלקה \"%1$s\" לא מיישמת ממשק \"%2$s\""
 
 #, php-format
 msgid "Class \"%1$s\" not available"
-msgstr "Clasa \"%1$s\" nu este disponibila"
+msgstr "מחלקה \"%1$s\" לא זמינה"
 
 #, php-format
 msgid "Class \"%1$s\" not found"
-msgstr "Clasa \"%1$s\" nu a fost gasita"
+msgstr "הכיתה \"%1$s\" לא נמצאה"
 
 #, php-format
 msgid "Downloading file \"%1$s\" failed"
-msgstr "Descarcarea fisierului \"%1$s\" a esuat"
+msgstr "הורדת הקובץ \"%1$s\" נכשלה"
 
 #, php-format
 msgid "File \"%1$s\" not found"
-msgstr "Fisierul \"%1$s\" nu a fost gasit"
+msgstr "הקובץ \"%1$s\" לא נמצא"
 
 #, php-format
 msgid "File type \"%1$s\" is not allowed"
-msgstr "Tipul de fișier \"%1$s\" nu este permis"
+msgstr "סוג הקובץ \"%1$s\" אינו מותר"
 
 #, php-format
 msgid "Invalid characters in class name \"%1$s\""
-msgstr "Caracter invalid in numele clasei \"%1$s\""
+msgstr "תווים לא חוקיים בשם המחלקה \"%1$s\""
 
 #, php-format
 msgid "No allowed image types configured for \"%1$s\""
-msgstr "Nu sunt permise tipuri de imagini configurate pentru \"%1$s\""
+msgstr "לא הוגדרו סוגי תמונות מותרים עבור \"%1$s\""
 
 #, php-format
 msgid "No type item for \"%1$s/%2$s\" in \"%3$s\" found"
-msgstr "Nici un tip de articol \"%1$s/%2$s\" găsit în \"%3$s\""
+msgstr "לא נמצא פריט סוג עבור \"%1$s/%2$s\" ב\"%3$s\""
 
 #, php-format
 msgid "Unable to create directory \"%1$s\""
-msgstr "Nu se poate crea directorul \"%1$s\""
+msgstr "לא ניתן ליצור ספרייה \"%1$s\""
 
 #, php-format
 msgid "Unable to create file in \"%1$s\""
-msgstr "Nu se poate crea fișierul în \"%1$s\""
+msgstr "לא ניתן ליצור קובץ ב\\%1$s\""
