--- a/i18n/controller/ro.po
+++ b/i18n/controller/ro.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# George Cojocaru, 2024
 # iulian iulian <iulian.abc@gmail.com>, 2020
 msgid ""
 msgstr ""
@@ -10,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-09-26 15:47+0200\n"
 "PO-Revision-Date: 2015-09-29 12:30+0000\n"
-"Last-Translator: iulian iulian <iulian.abc@gmail.com>, 2020\n"
+"Last-Translator: George Cojocaru, 2024\n"
 "Language-Team: Romanian (http://app.transifex.com/aimeos/aimeos-core/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +41,7 @@ msgstr "Fisierul \"%1$s\" nu a fost gasit"
 
 #, php-format
 msgid "File type \"%1$s\" is not allowed"
-msgstr ""
+msgstr "Tipul de fișier \"%1$s\" nu este permis"
 
 #, php-format
 msgid "Invalid characters in class name \"%1$s\""
@@ -56,8 +57,8 @@ msgstr "Nici un tip de articol \"%1$s/%2$s\" găsit în \"%3$s\""
 
 #, php-format
 msgid "Unable to create directory \"%1$s\""
-msgstr ""
+msgstr "Nu se poate crea directorul \"%1$s\""
 
 #, php-format
 msgid "Unable to create file in \"%1$s\""
-msgstr ""
+msgstr "Nu se poate crea fișierul în \"%1$s\""
