--- a/i18n/mshop/code/es.po
+++ b/i18n/mshop/code/es.po
@@ -8,6 +8,7 @@
 # Translators:
 # Translators:
 # Daniel Vega <danielvega131990@gmail.com>, 2015
+# Edu PM, 2024
 # Lara Merlotto <lara@vg7.it>, 2020
 msgid ""
 msgstr ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Lara Merlotto <lara@vg7.it>, 2020\n"
+"Last-Translator: Edu PM, 2024\n"
 "Language-Team: Spanish (http://app.transifex.com/aimeos/aimeos-core/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgstr "habilitado"
 
 #. Item status
 msgid "status:2"
-msgstr ""
+msgstr "Oculto"
 
 #. Address salutation
 msgid "company"
@@ -53,7 +54,7 @@ msgstr "Sr"
 
 #. Address salutation
 msgid "ms"
-msgstr ""
+msgstr "Srta"
 
 #. Address salutation
 msgid "mrs"
@@ -121,7 +122,7 @@ msgstr "recibido"
 
 #. Payment status value
 msgid "pay:7"
-msgstr ""
+msgstr "Transferido"
 
 #. Delivery status value
 msgid "stat:-1"
