--- a/i18n/mshop/zh_CN.po
+++ b/i18n/mshop/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-04 16:07+0200\n"
+"POT-Creation-Date: 2024-10-01 14:57+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
 "Last-Translator: Henry LIU <dadaycm@hotmail.com>, 2016\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/aimeos/aimeos-core/language/zh_CN/)\n"
@@ -835,6 +835,10 @@ msgstr ""
 #, php-format
 msgid "Started order status import from file \"%1$s\""
 msgstr ""
+
+#, fuzzy, php-format
+msgid "Status not available"
+msgstr "类型 \"%1$s\" 无法使用"
 
 #, php-format
 msgid "The algorithm \"%1$s\" is not supported"
