--- a/i18n/mshop/code/lv.po
+++ b/i18n/mshop/code/lv.po
@@ -27,7 +27,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-1"
-msgstr ""
+msgstr "Pārskats"
 
 #. Item status
 msgid "status:0"
@@ -47,7 +47,7 @@ msgstr "Uzņēmums"
 
 #. Address salutation
 msgid "mr"
-msgstr ""
+msgstr "mr"
 
 #. Address salutation
 msgid "ms"
@@ -55,11 +55,11 @@ msgstr ""
 
 #. Address salutation
 msgid "mrs"
-msgstr ""
+msgstr "mrs"
 
 #. Address salutation
 msgid "miss"
-msgstr ""
+msgstr "."
 
 #. Order type value
 msgid "order:repeat"
@@ -83,7 +83,7 @@ msgstr ""
 
 #. Subscription reason code
 msgid "reason:1"
-msgstr ""
+msgstr "iemesls: 1"
 
 #. Payment status value
 msgid "pay:-1"
@@ -95,23 +95,23 @@ msgstr "dzēsts"
 
 #. Payment status value
 msgid "pay:1"
-msgstr ""
+msgstr "iemesls: 1"
 
 #. Payment status value
 msgid "pay:2"
-msgstr ""
+msgstr "statuss: 6"
 
 #. Payment status value
 msgid "pay:3"
-msgstr ""
+msgstr "maksāt: 3"
 
 #. Payment status value
 msgid "pay:4"
-msgstr ""
+msgstr "statistika: 1"
 
 #. Payment status value
 msgid "pay:5"
-msgstr ""
+msgstr "maksāt: 5"
 
 #. Payment status value
 msgid "pay:6"
@@ -131,31 +131,31 @@ msgstr "dzēsts"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr ""
+msgstr "statistika: 1"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr ""
+msgstr "stat: 2"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr ""
+msgstr "stat: 3"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr ""
+msgstr "stat: 4"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr ""
+msgstr "stat: 5"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr ""
+msgstr "statuss: 6"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr ""
+msgstr "statuss: 7"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
