--- a/i18n/mshop/code/lt.po
+++ b/i18n/mshop/code/lt.po
@@ -27,7 +27,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-1"
-msgstr ""
+msgstr "Peržiūrėkite"
 
 #. Item status
 msgid "status:0"
@@ -47,7 +47,7 @@ msgstr "Įmonė"
 
 #. Address salutation
 msgid "mr"
-msgstr ""
+msgstr "ponas"
 
 #. Address salutation
 msgid "ms"
@@ -55,11 +55,11 @@ msgstr ""
 
 #. Address salutation
 msgid "mrs"
-msgstr ""
+msgstr "ponia"
 
 #. Address salutation
 msgid "miss"
-msgstr ""
+msgstr "ponia"
 
 #. Order type value
 msgid "order:repeat"
@@ -83,7 +83,7 @@ msgstr ""
 
 #. Subscription reason code
 msgid "reason:1"
-msgstr ""
+msgstr "priežastis: 1"
 
 #. Payment status value
 msgid "pay:-1"
@@ -91,31 +91,31 @@ msgstr ""
 
 #. Payment status value
 msgid "pay:0"
-msgstr ""
+msgstr "statistika: 0"
 
 #. Payment status value
 msgid "pay:1"
-msgstr ""
+msgstr "priežastis: 1"
 
 #. Payment status value
 msgid "pay:2"
-msgstr ""
+msgstr "mokėti: 2"
 
 #. Payment status value
 msgid "pay:3"
-msgstr ""
+msgstr "mokėti: 3"
 
 #. Payment status value
 msgid "pay:4"
-msgstr ""
+msgstr "statistika: 1"
 
 #. Payment status value
 msgid "pay:5"
-msgstr ""
+msgstr "darbo užmokestis: 5"
 
 #. Payment status value
 msgid "pay:6"
-msgstr ""
+msgstr "mokėti: 6"
 
 #. Payment status value
 msgid "pay:7"
@@ -127,35 +127,35 @@ msgstr ""
 
 #. Delivery status value
 msgid "stat:0"
-msgstr ""
+msgstr "statistika: 0"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr ""
+msgstr "statistika: 1"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr ""
+msgstr "statistika: 2"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr ""
+msgstr "statistika: 3"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr ""
+msgstr "statistika: 4"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr ""
+msgstr "statistika: 5"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr ""
+msgstr "mokėti: 2"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr ""
+msgstr "statistika: 7"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
