--- a/i18n/mshop/tr.po
+++ b/i18n/mshop/tr.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Metal <meteoramic@yahoo.com>, 2015-2024
+# Metal <meteoramic@yahoo.com>, 2015-2025
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-01-10 19:54+0100\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Metal <meteoramic@yahoo.com>, 2015-2024\n"
+"Last-Translator: Metal <meteoramic@yahoo.com>, 2015-2025\n"
 "Language-Team: Turkish (http://app.transifex.com/aimeos/aimeos-core/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -860,7 +860,7 @@ msgstr "\"%1$s\" dosyasından sipariş durumu içeri aktarımı başladı"
 
 #, php-format
 msgid "Status not available"
-msgstr "Adres mevcut değil"
+msgstr "Durum mevcut değil"
 
 #, php-format
 msgid "The algorithm \"%1$s\" is not supported"
