--- a/i18n/mshop/code/sv.po
+++ b/i18n/mshop/code/sv.po
@@ -27,7 +27,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-1"
-msgstr ""
+msgstr "Granskning"
 
 #. Item status
 msgid "status:0"
@@ -47,7 +47,7 @@ msgstr "Företag"
 
 #. Address salutation
 msgid "mr"
-msgstr ""
+msgstr "herr"
 
 #. Address salutation
 msgid "ms"
@@ -55,11 +55,11 @@ msgstr ""
 
 #. Address salutation
 msgid "mrs"
-msgstr ""
+msgstr "fruar"
 
 #. Address salutation
 msgid "miss"
-msgstr ""
+msgstr "miss"
 
 #. Order type value
 msgid "order:repeat"
@@ -83,7 +83,7 @@ msgstr ""
 
 #. Subscription reason code
 msgid "reason:1"
-msgstr ""
+msgstr "betala:1"
 
 #. Payment status value
 msgid "pay:-1"
@@ -91,31 +91,31 @@ msgstr "---"
 
 #. Payment status value
 msgid "pay:0"
-msgstr ""
+msgstr "betala:0"
 
 #. Payment status value
 msgid "pay:1"
-msgstr ""
+msgstr "betala:1"
 
 #. Payment status value
 msgid "pay:2"
-msgstr ""
+msgstr "betala:2"
 
 #. Payment status value
 msgid "pay:3"
-msgstr ""
+msgstr "betala:3"
 
 #. Payment status value
 msgid "pay:4"
-msgstr ""
+msgstr "lön:4"
 
 #. Payment status value
 msgid "pay:5"
-msgstr ""
+msgstr "lön:5"
 
 #. Payment status value
 msgid "pay:6"
-msgstr ""
+msgstr "lön:6"
 
 #. Payment status value
 msgid "pay:7"
@@ -127,35 +127,35 @@ msgstr "---"
 
 #. Delivery status value
 msgid "stat:0"
-msgstr ""
+msgstr "betala:0"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr ""
+msgstr "lön:4"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr ""
+msgstr "stat:2"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr ""
+msgstr "stat:3"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr ""
+msgstr "stat:4"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr ""
+msgstr "stat:5"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr ""
+msgstr "betala:2"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr ""
+msgstr "stat:7"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
