--- a/i18n/country/pt_BR.po
+++ b/i18n/country/pt_BR.po
@@ -9,6 +9,7 @@
 # Translators:
 # b5fdd37cec45d8078af7e530465bb050, 2016
 # Keite Clembet, 2022
+# Keite Clembet, 2022
 # b5fdd37cec45d8078af7e530465bb050, 2016
 msgid ""
 msgstr ""
