--- a/i18n/country/ro.po
+++ b/i18n/country/ro.po
@@ -8,6 +8,7 @@
 # Translators:
 # Translators:
 # George Cojocaru, 2024
+# George Cojocaru, 2024
 # iulian iulian <iulian.abc@gmail.com>, 2020
 msgid ""
 msgstr ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:34+0000\n"
-"Last-Translator: George Cojocaru, 2024\n"
+"Last-Translator: iulian iulian <iulian.abc@gmail.com>, 2020\n"
 "Language-Team: Romanian (http://app.transifex.com/aimeos/aimeos-core/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
