--- a/i18n/currency/hu.po
+++ b/i18n/currency/hu.po
@@ -4,13 +4,14 @@
 # Translators:
 # nzed <nemesreviz@gmail.com>, 2022
 # Nóra Antal <nora1984antal@gmail.com>, 2016
+# nzed <nemesreviz@gmail.com>, 2022
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:34+0000\n"
-"Last-Translator: nzed <nemesreviz@gmail.com>, 2022\n"
+"Last-Translator: Nóra Antal <nora1984antal@gmail.com>, 2016\n"
 "Language-Team: Hungarian (http://app.transifex.com/aimeos/aimeos-core/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
