--- a/i18n/mshop/pt.po
+++ b/i18n/mshop/pt.po
@@ -230,7 +230,7 @@ msgstr "Código do cupom \"%1$s\" duplicado"
 
 #, php-format
 msgid "Expanding \"%1$s\" node failed"
-msgstr ""
+msgstr "Falha na expansão do nó \"%1$s\""
 
 #, php-format
 msgid "File \"%1$s\" not found"
@@ -510,7 +510,7 @@ msgstr ""
 
 #, php-format
 msgid "No XML file \"%1$s\" found"
-msgstr ""
+msgstr "Não foi encontrado nenhum ficheiro XML \"%1$s\""
 
 #, php-format
 msgid "No bought voucher for code \"%1$s\" available"
@@ -797,7 +797,7 @@ msgstr ""
 
 #, php-format
 msgid "Required parameter \"%1$s\" is missing"
-msgstr ""
+msgstr "O parâmetro obrigatório \"%1$s\" está em falta"
 
 #, php-format
 msgid "Required value for \"%1$s\" is missing"
