--- a/i18n/controller/ru.po
+++ b/i18n/controller/ru.po
@@ -32,11 +32,11 @@ msgstr "Не найден класс \"%1$s\""
 
 #, php-format
 msgid "Downloading file \"%1$s\" failed"
-msgstr ""
+msgstr "Загрузка файла \"%1$s\" не удалась"
 
 #, php-format
 msgid "File \"%1$s\" not found"
-msgstr ""
+msgstr "Файл \"%1$s\" не найден"
 
 #, php-format
 msgid "File type \"%1$s\" is not allowed"
