--- a/i18n/mshop/code/el.po
+++ b/i18n/mshop/code/el.po
@@ -7,13 +7,14 @@
 # Translators:
 # Translators:
 # Translators:
+# Aimeos, 2025
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Aimeos <aimeos@aimeos.org>\n"
+"Last-Translator: Aimeos, 2025\n"
 "Language-Team: Greek (http://app.transifex.com/aimeos/aimeos-core/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-2"
-msgstr ""
+msgstr "Αρχειοθετημένο"
 
 #. Item status
 msgid "status:-1"
@@ -31,15 +32,15 @@ msgstr "Ανασκόπηση"
 
 #. Item status
 msgid "status:0"
-msgstr ""
+msgstr "Άτομα με ειδικές ανάγκες"
 
 #. Item status
 msgid "status:1"
-msgstr ""
+msgstr "Ενεργοποιημένο"
 
 #. Item status
 msgid "status:2"
-msgstr ""
+msgstr "Κρυφό"
 
 #. Address salutation
 msgid "company"
@@ -47,11 +48,11 @@ msgstr "Εταιρεία"
 
 #. Address salutation
 msgid "mr"
-msgstr "κ."
+msgstr "Κύριε"
 
 #. Address salutation
 msgid "ms"
-msgstr ""
+msgstr "Κυρία"
 
 #. Address salutation
 msgid "mrs"
@@ -59,19 +60,19 @@ msgstr "κυρία"
 
 #. Address salutation
 msgid "miss"
-msgstr "miss"
+msgstr "Κυρία"
 
 #. Order type value
 msgid "order:repeat"
-msgstr ""
+msgstr "επανειλημμένα"
 
 #. Order type value
 msgid "order:web"
-msgstr ""
+msgstr "διαδίκτυο"
 
 #. Order type value
 msgid "order:phone"
-msgstr ""
+msgstr "τηλέφωνο"
 
 #. Subscription reason code
 msgid "reason:-1"
@@ -79,132 +80,132 @@ msgstr "πληρωμή"
 
 #. Subscription reason code
 msgid "reason:0"
-msgstr ""
+msgstr "ληγμένο"
 
 #. Subscription reason code
 msgid "reason:1"
-msgstr "pay:1"
+msgstr "ακυρώθηκε"
 
 #. Payment status value
 msgid "pay:-1"
-msgstr ""
+msgstr "---"
 
 #. Payment status value
 msgid "pay:0"
-msgstr "pay:0"
+msgstr "διαγράφηκε"
 
 #. Payment status value
 msgid "pay:1"
-msgstr "pay:1"
+msgstr "ακυρώθηκε"
 
 #. Payment status value
 msgid "pay:2"
-msgstr "stat:6"
+msgstr "αρνήθηκε"
 
 #. Payment status value
 msgid "pay:3"
-msgstr "pay:3"
+msgstr "επιστρέφεται"
 
 #. Payment status value
 msgid "pay:4"
-msgstr "pay:4"
+msgstr "σε εκκρεμότητα"
 
 #. Payment status value
 msgid "pay:5"
-msgstr "pay:5"
+msgstr "εξουσιοδοτημένο"
 
 #. Payment status value
 msgid "pay:6"
-msgstr "pay:6"
+msgstr "έλαβε"
 
 #. Payment status value
 msgid "pay:7"
-msgstr ""
+msgstr "μεταφέρεται"
 
 #. Delivery status value
 msgid "stat:-1"
-msgstr ""
+msgstr "---"
 
 #. Delivery status value
 msgid "stat:0"
-msgstr "pay:0"
+msgstr "διαγράφηκε"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr "pay:4"
+msgstr "σε εκκρεμότητα"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr "stat:2"
+msgstr "σε εξέλιξη"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr "stat:3"
+msgstr "αποστέλλονται"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr "stat:4"
+msgstr "παραδίδεται"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr "stat:5"
+msgstr "χαμένο"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr "stat:6"
+msgstr "αρνήθηκε"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr "stat:7"
+msgstr "επέστρεψε"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
-msgstr ""
+msgstr "Η διεύθυνση χρέωσης λείπει"
 
 #. Address plugin error: Delivery address not available
 msgid "address.delivery.available.none"
-msgstr ""
+msgstr "Η διεύθυνση παράδοσης λείπει"
 
 #. Address plugin error: Payment address not allowed
 msgid "address.payment.available.notallowed"
-msgstr ""
+msgstr "Η διεύθυνση χρέωσης δεν επιτρέπεται"
 
 #. Address plugin error: Delivery address not allowed
 msgid "address.delivery.available.notallowed"
-msgstr ""
+msgstr "Η διεύθυνση παράδοσης δεν επιτρέπεται"
 
 #. Service plugin error: Payment service not available
 msgid "service.payment.available.none"
-msgstr ""
+msgstr "Η επιλογή πληρωμής λείπει"
 
 #. Service plugin error: Delivery service not available
 msgid "service.delivery.available.none"
-msgstr ""
+msgstr "Η επιλογή παράδοσης λείπει"
 
 #. Service plugin error: Payment service not allowed
 msgid "service.payment.available.notallowed"
-msgstr ""
+msgstr "Μια επιλογή πληρωμής δεν επιτρέπεται"
 
 #. Service plugin error: Delivery service not allowed
 msgid "service.delivery.available.notallowed"
-msgstr ""
+msgstr "Δεν επιτρέπεται η επιλογή παράδοσης"
 
 #. ProductGone plugin error: Product doesn't exists
 msgid "product.gone.notexist"
-msgstr ""
+msgstr "Λυπούμαστε, τουλάχιστον ένα προϊόν δεν υπάρχει πια. Παρακαλώ αφαιρέστε το από το καλάθι σας για να συνεχίσετε."
 
 #. ProductGone plugin error: Product status disabled
 msgid "product.gone.status"
-msgstr ""
+msgstr "Συγγνώμη, τουλάχιστον ένα προϊόν ήταν απενεργοποιημένο. Παρακαλώ αφαιρέστε το από το καλάθι σας για να συνεχίσετε."
 
 #. ProductGone plugin error: Product out of timeframe
 msgid "product.gone.timeframe"
-msgstr ""
+msgstr "Λυπούμαστε, τουλάχιστον ένα προϊόν δεν είναι πλέον διαθέσιμο. Παρακαλώ αφαιρέστε το από το καλάθι σας για να συνεχίσετε."
 
 #. ProductPrice plugin error: Product price changed
 msgid "product.price.changed"
-msgstr ""
+msgstr "Η τιμή τουλάχιστον ενός προϊόντος άλλαξε εν τω μεταξύ και ενημερώθηκε αυτόματα."
 
 #. ProductStock plugin error: Product out of stock
 msgid "product.stock.notenough"
-msgstr ""
+msgstr "Λυπούμαστε, τουλάχιστον ένα προϊόν έχει εξαντληθεί. Παρακαλώ αφαιρέστε το από το καλάθι σας για να συνεχίσετε"
