--- a/i18n/mshop/code/et.po
+++ b/i18n/mshop/code/et.po
@@ -7,13 +7,14 @@
 # Translators:
 # Translators:
 # Translators:
+# Aimeos, 2025
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Aimeos <aimeos@aimeos.org>\n"
+"Last-Translator: Aimeos, 2025\n"
 "Language-Team: Estonian (http://app.transifex.com/aimeos/aimeos-core/language/et/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-2"
-msgstr ""
+msgstr "Arhiveeritud"
 
 #. Item status
 msgid "status:-1"
@@ -31,15 +32,15 @@ msgstr "Ülevaade"
 
 #. Item status
 msgid "status:0"
-msgstr ""
+msgstr "Puudega inimesed"
 
 #. Item status
 msgid "status:1"
-msgstr ""
+msgstr "Lubatud"
 
 #. Item status
 msgid "status:2"
-msgstr ""
+msgstr "Peidetud"
 
 #. Address salutation
 msgid "company"
@@ -51,7 +52,7 @@ msgstr "hr"
 
 #. Address salutation
 msgid "ms"
-msgstr ""
+msgstr "pr"
 
 #. Address salutation
 msgid "mrs"
@@ -59,19 +60,19 @@ msgstr "pr"
 
 #. Address salutation
 msgid "miss"
-msgstr "miss"
+msgstr "pr"
 
 #. Order type value
 msgid "order:repeat"
-msgstr ""
+msgstr "korduv"
 
 #. Order type value
 msgid "order:web"
-msgstr ""
+msgstr "internet"
 
 #. Order type value
 msgid "order:phone"
-msgstr ""
+msgstr "telefon"
 
 #. Subscription reason code
 msgid "reason:-1"
@@ -79,7 +80,7 @@ msgstr "makse"
 
 #. Subscription reason code
 msgid "reason:0"
-msgstr ""
+msgstr "aegunud"
 
 #. Subscription reason code
 msgid "reason:1"
@@ -91,35 +92,35 @@ msgstr "---"
 
 #. Payment status value
 msgid "pay:0"
-msgstr "maksma:0"
+msgstr "kustutatud"
 
 #. Payment status value
 msgid "pay:1"
-msgstr "põhjus:1"
+msgstr "tühistatud"
 
 #. Payment status value
 msgid "pay:2"
-msgstr "stat:6"
+msgstr "keeldus"
 
 #. Payment status value
 msgid "pay:3"
-msgstr "maksma:3"
+msgstr "tagastatud"
 
 #. Payment status value
 msgid "pay:4"
-msgstr "stat:1"
+msgstr "ootab"
 
 #. Payment status value
 msgid "pay:5"
-msgstr "maksma:5"
+msgstr "volitatud"
 
 #. Payment status value
 msgid "pay:6"
-msgstr "maksma:6"
+msgstr "sai"
 
 #. Payment status value
 msgid "pay:7"
-msgstr ""
+msgstr "üle kantud"
 
 #. Delivery status value
 msgid "stat:-1"
@@ -127,84 +128,84 @@ msgstr "---"
 
 #. Delivery status value
 msgid "stat:0"
-msgstr "maksma:0"
+msgstr "kustutatud"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr "stat:1"
+msgstr "ootab"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr "stat:2"
+msgstr "pooleli"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr "stat:3"
+msgstr "lähetatud"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr "stat:4"
+msgstr "tarnitakse"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr "stat:5"
+msgstr "kadunud"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr "stat:6"
+msgstr "keeldus"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr "stat:7"
+msgstr "tagastatud"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
-msgstr ""
+msgstr "Puudub arveldusaadress"
 
 #. Address plugin error: Delivery address not available
 msgid "address.delivery.available.none"
-msgstr ""
+msgstr "Kättetoimetamise aadress puudub"
 
 #. Address plugin error: Payment address not allowed
 msgid "address.payment.available.notallowed"
-msgstr ""
+msgstr "Arveldusaadress ei ole lubatud"
 
 #. Address plugin error: Delivery address not allowed
 msgid "address.delivery.available.notallowed"
-msgstr ""
+msgstr "Kättetoimetamise aadress ei ole lubatud"
 
 #. Service plugin error: Payment service not available
 msgid "service.payment.available.none"
-msgstr ""
+msgstr "Maksevõimalus puudub"
 
 #. Service plugin error: Delivery service not available
 msgid "service.delivery.available.none"
-msgstr ""
+msgstr "Kohaletoimetamise võimalus puudub"
 
 #. Service plugin error: Payment service not allowed
 msgid "service.payment.available.notallowed"
-msgstr ""
+msgstr "Maksevõimalus ei ole lubatud"
 
 #. Service plugin error: Delivery service not allowed
 msgid "service.delivery.available.notallowed"
-msgstr ""
+msgstr "Kohaletoimetamise võimalus ei ole lubatud"
 
 #. ProductGone plugin error: Product doesn't exists
 msgid "product.gone.notexist"
-msgstr ""
+msgstr "Vabandust, vähemalt ühte toodet ei ole enam olemas. Palun eemaldage see oma ostukorvist, et jätkata"
 
 #. ProductGone plugin error: Product status disabled
 msgid "product.gone.status"
-msgstr ""
+msgstr "Vabandust, vähemalt üks toode oli välja lülitatud. Palun eemaldage see oma ostukorvist, et jätkata"
 
 #. ProductGone plugin error: Product out of timeframe
 msgid "product.gone.timeframe"
-msgstr ""
+msgstr "Kahjuks ei ole vähemalt üks toode enam saadaval. Palun eemaldage see oma ostukorvist, et jätkata"
 
 #. ProductPrice plugin error: Product price changed
 msgid "product.price.changed"
-msgstr ""
+msgstr "Vähemalt ühe toote hind on vahepeal muutunud ja seda uuendati automaatselt"
 
 #. ProductStock plugin error: Product out of stock
 msgid "product.stock.notenough"
-msgstr ""
+msgstr "Kahjuks on vähemalt üks toode otsas. Palun eemaldage see ostukorvist, et jätkata"
