--- a/i18n/mshop/code/fi.po
+++ b/i18n/mshop/code/fi.po
@@ -7,13 +7,14 @@
 # Translators:
 # Translators:
 # Translators:
+# Aimeos, 2025
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Aimeos <aimeos@aimeos.org>\n"
+"Last-Translator: Aimeos, 2025\n"
 "Language-Team: Finnish (http://app.transifex.com/aimeos/aimeos-core/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-2"
-msgstr ""
+msgstr "Arkistoitu"
 
 #. Item status
 msgid "status:-1"
@@ -31,15 +32,15 @@ msgstr "Arvostelu"
 
 #. Item status
 msgid "status:0"
-msgstr ""
+msgstr "Vammaiset"
 
 #. Item status
 msgid "status:1"
-msgstr ""
+msgstr "Käytössä"
 
 #. Item status
 msgid "status:2"
-msgstr ""
+msgstr "Piilotettu"
 
 #. Address salutation
 msgid "company"
@@ -47,31 +48,31 @@ msgstr "Yritys"
 
 #. Address salutation
 msgid "mr"
-msgstr "Mr"
+msgstr "Herra"
 
 #. Address salutation
 msgid "ms"
-msgstr ""
+msgstr "Rouva"
 
 #. Address salutation
 msgid "mrs"
-msgstr "mrs"
+msgstr "Rouva"
 
 #. Address salutation
 msgid "miss"
-msgstr "Miss"
+msgstr "Neiti"
 
 #. Order type value
 msgid "order:repeat"
-msgstr ""
+msgstr "toistuva"
 
 #. Order type value
 msgid "order:web"
-msgstr ""
+msgstr "internet"
 
 #. Order type value
 msgid "order:phone"
-msgstr ""
+msgstr "puhelin"
 
 #. Subscription reason code
 msgid "reason:-1"
@@ -79,11 +80,11 @@ msgstr "maksu"
 
 #. Subscription reason code
 msgid "reason:0"
-msgstr ""
+msgstr "päättynyt"
 
 #. Subscription reason code
 msgid "reason:1"
-msgstr "syy:1"
+msgstr "peruutettu"
 
 #. Payment status value
 msgid "pay:-1"
@@ -91,35 +92,35 @@ msgstr "---"
 
 #. Payment status value
 msgid "pay:0"
-msgstr "stat:0"
+msgstr "poistettu"
 
 #. Payment status value
 msgid "pay:1"
-msgstr "syy:1"
+msgstr "peruutettu"
 
 #. Payment status value
 msgid "pay:2"
-msgstr "stat:6"
+msgstr "kieltäytyi"
 
 #. Payment status value
 msgid "pay:3"
-msgstr "palkka:3"
+msgstr "palautettu"
 
 #. Payment status value
 msgid "pay:4"
-msgstr "palkka:4"
+msgstr "vireillä"
 
 #. Payment status value
 msgid "pay:5"
-msgstr "maksaa:5"
+msgstr "valtuutettu"
 
 #. Payment status value
 msgid "pay:6"
-msgstr "palkka:6"
+msgstr "vastaanotettu"
 
 #. Payment status value
 msgid "pay:7"
-msgstr ""
+msgstr "siirretty"
 
 #. Delivery status value
 msgid "stat:-1"
@@ -127,84 +128,84 @@ msgstr "---"
 
 #. Delivery status value
 msgid "stat:0"
-msgstr "stat:0"
+msgstr "poistettu"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr "palkka:4"
+msgstr "vireillä"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr "stat:2"
+msgstr "tekeillä"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr "stat:3"
+msgstr "lähetetty"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr "stat:4"
+msgstr "toimitettu"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr "stat:5"
+msgstr "kadonnut"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr "stat:6"
+msgstr "kieltäytyi"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr "stat:7"
+msgstr "palautettu"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
-msgstr ""
+msgstr "Laskutusosoite puuttuu"
 
 #. Address plugin error: Delivery address not available
 msgid "address.delivery.available.none"
-msgstr ""
+msgstr "Toimitusosoite puuttuu"
 
 #. Address plugin error: Payment address not allowed
 msgid "address.payment.available.notallowed"
-msgstr ""
+msgstr "Laskutusosoite ei ole sallittu"
 
 #. Address plugin error: Delivery address not allowed
 msgid "address.delivery.available.notallowed"
-msgstr ""
+msgstr "Toimitusosoite ei ole sallittu"
 
 #. Service plugin error: Payment service not available
 msgid "service.payment.available.none"
-msgstr ""
+msgstr "Maksuvaihtoehto puuttuu"
 
 #. Service plugin error: Delivery service not available
 msgid "service.delivery.available.none"
-msgstr ""
+msgstr "Toimitusvaihtoehto puuttuu"
 
 #. Service plugin error: Payment service not allowed
 msgid "service.payment.available.notallowed"
-msgstr ""
+msgstr "Maksuvaihtoehto ei ole sallittu"
 
 #. Service plugin error: Delivery service not allowed
 msgid "service.delivery.available.notallowed"
-msgstr ""
+msgstr "Toimitusvaihtoehto ei ole sallittu"
 
 #. ProductGone plugin error: Product doesn't exists
 msgid "product.gone.notexist"
-msgstr ""
+msgstr "Valitettavasti ainakaan yhtä tuotetta ei ole enää olemassa. Poista se korista jatkaaksesi"
 
 #. ProductGone plugin error: Product status disabled
 msgid "product.gone.status"
-msgstr ""
+msgstr "Valitettavasti ainakin yksi tuote oli poistettu käytöstä. Poista se korista jatkaaksesi"
 
 #. ProductGone plugin error: Product out of timeframe
 msgid "product.gone.timeframe"
-msgstr ""
+msgstr "Valitettavasti ainakin yhtä tuotetta ei ole enää saatavilla. Poista se korista jatkaaksesi"
 
 #. ProductPrice plugin error: Product price changed
 msgid "product.price.changed"
-msgstr ""
+msgstr "Ainakin yhden tuotteen hinta on tällä välin muuttunut ja se päivittyi automaattisesti."
 
 #. ProductStock plugin error: Product out of stock
 msgid "product.stock.notenough"
-msgstr ""
+msgstr "Valitettavasti ainakin yksi tuote on loppunut varastosta. Poista se korista jatkaaksesi"
