--- a/i18n/mshop/code/hu.po
+++ b/i18n/mshop/code/hu.po
@@ -7,6 +7,7 @@
 # Translators:
 # Translators:
 # Translators:
+# Aimeos, 2025
 # nzed <nemesreviz@gmail.com>, 2020,2022
 # Nóra Antal <nora1984antal@gmail.com>, 2016
 # nzed <nemesreviz@gmail.com>, 2020,2022
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Péter Kozma <kopegrafika@gmail.com>, 2016\n"
+"Last-Translator: Aimeos, 2025\n"
 "Language-Team: Hungarian (http://app.transifex.com/aimeos/aimeos-core/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,19 +29,19 @@ msgstr ""
 
 #. Item status
 msgid "status:-2"
-msgstr "állapot:archív"
+msgstr "archív"
 
 #. Item status
 msgid "status:-1"
-msgstr "állapot:felülvizsgálat alatt"
+msgstr "felülvizsgálat alatt"
 
 #. Item status
 msgid "status:0"
-msgstr "állapot:letiltva"
+msgstr "letiltva"
 
 #. Item status
 msgid "status:1"
-msgstr "állapot:engedélyezett"
+msgstr "engedélyezett"
 
 #. Item status
 msgid "status:2"
