--- a/i18n/mshop/code/nb.po
+++ b/i18n/mshop/code/nb.po
@@ -7,13 +7,15 @@
 # Translators:
 # Translators:
 # Translators:
+# Aimeos, 2025
+# Aimeos, 2025
 msgid ""
 msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: Aimeos <aimeos@aimeos.org>\n"
+"Last-Translator: Aimeos, 2025\n"
 "Language-Team: Norwegian Bokmål (http://app.transifex.com/aimeos/aimeos-core/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +25,7 @@ msgstr ""
 
 #. Item status
 msgid "status:-2"
-msgstr ""
+msgstr "Arkivert"
 
 #. Item status
 msgid "status:-1"
@@ -31,15 +33,15 @@ msgstr "Anmeldelse"
 
 #. Item status
 msgid "status:0"
-msgstr ""
+msgstr "Deaktivert"
 
 #. Item status
 msgid "status:1"
-msgstr ""
+msgstr "Aktivert"
 
 #. Item status
 msgid "status:2"
-msgstr ""
+msgstr "Skjult"
 
 #. Address salutation
 msgid "company"
@@ -47,15 +49,15 @@ msgstr "Selskap"
 
 #. Address salutation
 msgid "mr"
-msgstr "Mr."
+msgstr "Herr"
 
 #. Address salutation
 msgid "ms"
-msgstr ""
+msgstr "Fru"
 
 #. Address salutation
 msgid "mrs"
-msgstr "frue"
+msgstr "Frue"
 
 #. Address salutation
 msgid "miss"
@@ -63,148 +65,148 @@ msgstr "gå glipp av"
 
 #. Order type value
 msgid "order:repeat"
-msgstr ""
+msgstr "Gjenta"
 
 #. Order type value
 msgid "order:web"
-msgstr ""
+msgstr "Nett"
 
 #. Order type value
 msgid "order:phone"
-msgstr ""
+msgstr "Telefon"
 
 #. Subscription reason code
 msgid "reason:-1"
-msgstr "betaling"
+msgstr "Betaling"
 
 #. Subscription reason code
 msgid "reason:0"
-msgstr ""
+msgstr "Slutt"
 
 #. Subscription reason code
 msgid "reason:1"
-msgstr "grunn:1"
+msgstr "Kansellert"
 
 #. Payment status value
 msgid "pay:-1"
-msgstr ""
+msgstr "Uferdig"
 
 #. Payment status value
 msgid "pay:0"
-msgstr "stat:0"
+msgstr "Slettet"
 
 #. Payment status value
 msgid "pay:1"
-msgstr "grunn:1"
+msgstr "Kansellert"
 
 #. Payment status value
 msgid "pay:2"
-msgstr "stat:6"
+msgstr "Nektet"
 
 #. Payment status value
 msgid "pay:3"
-msgstr "lønn:3"
+msgstr "Refusjon"
 
 #. Payment status value
 msgid "pay:4"
-msgstr "lønn:4"
+msgstr "I påvente av"
 
 #. Payment status value
 msgid "pay:5"
-msgstr "lønn:5"
+msgstr "Autorisert"
 
 #. Payment status value
 msgid "pay:6"
-msgstr "lønn:6"
+msgstr "Mottatt"
 
 #. Payment status value
 msgid "pay:7"
-msgstr ""
+msgstr "Overført"
 
 #. Delivery status value
 msgid "stat:-1"
-msgstr ""
+msgstr "Uferdig"
 
 #. Delivery status value
 msgid "stat:0"
-msgstr "stat:0"
+msgstr "Slettet"
 
 #. Delivery status value
 msgid "stat:1"
-msgstr "lønn:4"
+msgstr "I påvente av"
 
 #. Delivery status value
 msgid "stat:2"
-msgstr "stat:2"
+msgstr "Pågående"
 
 #. Delivery status value
 msgid "stat:3"
-msgstr "stat:3"
+msgstr "Utsendt"
 
 #. Delivery status value
 msgid "stat:4"
-msgstr "stat:4"
+msgstr "Leveres"
 
 #. Delivery status value
 msgid "stat:5"
-msgstr "stat:5"
+msgstr "Fortapt"
 
 #. Delivery status value
 msgid "stat:6"
-msgstr "stat:6"
+msgstr "Avvist"
 
 #. Delivery status value
 msgid "stat:7"
-msgstr "stat:7"
+msgstr "Returnert"
 
 #. Address plugin error: Payment address not available
 msgid "address.payment.available.none"
-msgstr ""
+msgstr "Betalingsadresse ikke tilgjengelig"
 
 #. Address plugin error: Delivery address not available
 msgid "address.delivery.available.none"
-msgstr ""
+msgstr "Leveringsadresse ikke tilgjengelig"
 
 #. Address plugin error: Payment address not allowed
 msgid "address.payment.available.notallowed"
-msgstr ""
+msgstr "Betalingsadresse ikke tillatt"
 
 #. Address plugin error: Delivery address not allowed
 msgid "address.delivery.available.notallowed"
-msgstr ""
+msgstr "Leveringsadresse ikke tillatt"
 
 #. Service plugin error: Payment service not available
 msgid "service.payment.available.none"
-msgstr ""
+msgstr "Betalingstjeneste ikke tilgjengelig"
 
 #. Service plugin error: Delivery service not available
 msgid "service.delivery.available.none"
-msgstr ""
+msgstr "Leveringstjeneste ikke tilgjengelig"
 
 #. Service plugin error: Payment service not allowed
 msgid "service.payment.available.notallowed"
-msgstr ""
+msgstr "Betalingstjeneste ikke tillatt"
 
 #. Service plugin error: Delivery service not allowed
 msgid "service.delivery.available.notallowed"
-msgstr ""
+msgstr "Leveringstjeneste ikke tillatt"
 
 #. ProductGone plugin error: Product doesn't exists
 msgid "product.gone.notexist"
-msgstr ""
+msgstr "Produktet finnes ikke"
 
 #. ProductGone plugin error: Product status disabled
 msgid "product.gone.status"
-msgstr ""
+msgstr "Produktstatus deaktivert"
 
 #. ProductGone plugin error: Product out of timeframe
 msgid "product.gone.timeframe"
-msgstr ""
+msgstr "Produkt utenfor tidsrammen"
 
 #. ProductPrice plugin error: Product price changed
 msgid "product.price.changed"
-msgstr ""
+msgstr "Produktpris endret"
 
 #. ProductStock plugin error: Product out of stock
 msgid "product.stock.notenough"
-msgstr ""
+msgstr "Produktet er utsolgt"
