--- a/i18n/mshop/code/zh.po
+++ b/i18n/mshop/code/zh.po
@@ -7,6 +7,7 @@
 # Translators:
 # Translators:
 # Translators:
+# Aimeos, 2025
 # Bruce Liu <zcon.bruce@gmail.com>, 2016
 # Hans He, 2022
 # Hans He, 2022
@@ -19,7 +20,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-09 09:14+0200\n"
 "PO-Revision-Date: 2015-07-09 20:36+0000\n"
-"Last-Translator: stevechen <steve.stevechen@gmail.com>, 2018\n"
+"Last-Translator: Aimeos, 2025\n"
 "Language-Team: Chinese (http://app.transifex.com/aimeos/aimeos-core/language/zh/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,19 +30,19 @@ msgstr ""
 
 #. Item status
 msgid "status:-2"
-msgstr "狀態：已封存"
+msgstr "已封存"
 
 #. Item status
 msgid "status:-1"
-msgstr "狀態：已審核"
+msgstr "已審核"
 
 #. Item status
 msgid "status:0"
-msgstr "狀態：已停用"
+msgstr "已停用"
 
 #. Item status
 msgid "status:1"
-msgstr "狀態：已啟用"
+msgstr "已啟用"
 
 #. Item status
 msgid "status:2"
